--- a/index.html
+++ b/index.html
@@ -1,1 +1,171 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>AuraPro Ads | AI-Powered Cinematic Commercials</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="site-header">
+    <div class="container nav-container">
+      <a href="index.html" class="logo">
+        <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
+        <span class="logo-tag">APA</span>
+      </a>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-link active">Home</a>
+        <a href="services.html" class="nav-link">Services</a>
+        <a href="pricing.html" class="nav-link">Pricing</a>
+        <a href="contact.html" class="nav-link nav-cta">Get Your Ad Created</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <!-- Hero Section -->
+    <section class="hero">
+      <div class="hero-overlay"></div>
+      <div class="container hero-content">
+        <div class="hero-text">
+          <h1 class="hero-title">
+            Cinematic Ads.<br>
+            Powered by <span class="neon-blue">AI</span>.<br>
+            Built to <span class="neon-red">Be Seen</span>.
+          </h1>
+          <p class="hero-subtitle">
+            AuraPro Ads creates high-impact commercials and social ads using cutting-edge AI tools—
+            designed to stop the scroll, elevate your brand, and convert attention into action.
+          </p>
+          <div class="hero-actions">
+            <a href="contact.html" class="btn btn-primary">Get Your Ad Created</a>
+            <a href="pricing.html" class="btn btn-ghost">View Pricing</a>
+          </div>
+          <div class="hero-meta">
+            <span class="badge">AI-Crafted Visuals</span>
+            <span class="badge">Built for Social & Web</span>
+            <span class="badge">Fast Turnaround</span>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- Why AuraPro Section -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Not Just Ads — Brand Experiences</h2>
+        <p class="section-intro">
+          AuraPro Ads blends storytelling, motion design, and AI-powered visuals to deliver commercials
+          that feel premium without the traditional agency price tag.
+        </p>
+
+        <div class="grid grid-3">
+          <div class="card">
+            <h3 class="card-title">Cinematic Quality</h3>
+            <p class="card-body">
+              High-end, cinematic visuals with dynamic lighting, motion, and pacing that make your brand feel bigger than your budget.
+            </p>
+          </div>
+          <div class="card">
+            <h3 class="card-title">AI-Powered Efficiency</h3>
+            <p class="card-body">
+              We leverage AI tools to move fast—letting you get premium-looking ads at accessible price points.
+            </p>
+          </div>
+          <div class="card">
+            <h3 class="card-title">Built for the Feed</h3>
+            <p class="card-body">
+              Every ad is designed for modern platforms: Reels, TikTok, YouTube, and your website.
+            </p>
+          </div>
+        </div>
+      </div>
+    </section>
+
+    <!-- How It Works -->
+    <section class="section section-alt">
+      <div class="container">
+        <h2 class="section-title">How It Works</h2>
+        <div class="steps">
+          <div class="step">
+            <div class="step-badge">01</div>
+            <h3 class="step-title">Share Your Vision</h3>
+            <p class="step-body">
+              Tell us about your brand, offer, and what you want this ad to achieve—sales, awareness, launch, or promotion.
+            </p>
+          </div>
+          <div class="step">
+            <div class="step-badge">02</div>
+            <h3 class="step-title">We Create the Ad</h3>
+            <p class="step-body">
+              We handle script shaping, visual direction, and AI-powered production—from concept to final file.
+            </p>
+          </div>
+          <div class="step">
+            <div class="step-badge">03</div>
+            <h3 class="step-title">You Launch & Scale</h3>
+            <p class="step-body">
+              Post your ad across social and web, test variations, and scale what converts. We’re ready for your next one.
+            </p>
+          </div>
+        </div>
+
+        <div class="centered">
+          <a href="contact.html" class="btn btn-primary">Start Your Project</a>
+        </div>
+      </div>
+    </section>
+
+    <!-- Featured Packages -->
+    <section class="section">
+      <div class="container">
+        <h2 class="section-title">Starter-Friendly, Brand-Ready Pricing</h2>
+        <p class="section-intro">
+          Begin with a single cinematic ad or build a full campaign suite. Scale up as your brand grows.
+        </p>
+
+        <div class="grid grid-3 pricing-preview">
+          <div class="card card-price">
+            <h3 class="card-title">Starter Spotlight</h3>
+            <p class="price">$175</p>
+            <p class="card-body">
+              One short cinematic ad to introduce your brand, offer, or promotion.
+            </p>
+            <a href="pricing.html" class="btn btn-outline">View Details</a>
+          </div>
+          <div class="card card-price card-highlight">
+            <h3 class="card-title">Growth Campaign</h3>
+            <p class="price">$350</p>
+            <p class="card-body">
+              A main ad plus social cutdowns—perfect for brands leveling up their online presence.
+            </p>
+            <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
+          </div>
+          <div class="card card-price">
+            <h3 class="card-title">Domination Package</h3>
+            <p class="price">$1,500</p>
+            <p class="card-body">
+              Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
+            </p>
+            <a href="pricing.html" class="btn btn-outline">See All Packages</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> AuraPro Ads (APA). All rights reserved.</p>
+      <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
+    </div>
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+  </footer>
+</body>
+</html>
 
