--- a/services.html
+++ b/services.html
@@ -1,1 +1,110 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Services | AuraPro Ads</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="site-header">
+    <div class="container nav-container">
+      <a href="index.html" class="logo">
+        <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
+        <span class="logo-tag">APA</span>
+      </a>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="services.html" class="nav-link active">Services</a>
+        <a href="pricing.html" class="nav-link">Pricing</a>
+        <a href="contact.html" class="nav-link nav-cta">Get Your Ad Created</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="section page-hero">
+      <div class="container">
+        <h1 class="page-title">What We Create</h1>
+        <p class="section-intro">
+          AuraPro Ads focuses on cinematic, AI-powered commercials and social ads that help real brands look and feel premium online.
+        </p>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="grid grid-2">
+          <div class="card">
+            <h2 class="card-title">Cinematic Commercials</h2>
+            <p class="card-body">
+              High-impact, story-driven videos to showcase your brand, product, or service. Ideal for websites, landing pages, and YouTube.
+            </p>
+            <ul class="list">
+              <li>30–60 second flagship videos</li>
+              <li>AI-enhanced visuals and motion</li>
+              <li>On-brand messaging and CTA</li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h2 class="card-title">Social Media Ad Suites</h2>
+            <p class="card-body">
+              Short-form ads built for speed and attention. Perfect for Reels, TikTok, Shorts, and paid campaigns.
+            </p>
+            <ul class="list">
+              <li>Multiple aspect ratios available</li>
+              <li>Hook-first, attention-grabbing openings</li>
+              <li>Optimized for mobile viewing</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="grid grid-2">
+          <div class="card">
+            <h2 class="card-title">Campaign Concepts</h2>
+            <p class="card-body">
+              Beyond “just a video”, we help you shape a simple campaign idea—so your ads work together across platforms.
+            </p>
+            <ul class="list">
+              <li>Simple campaign angles</li>
+              <li>Content sequencing ideas</li>
+              <li>Suggestions for headlines and captions</li>
+            </ul>
+          </div>
+
+          <div class="card">
+            <h2 class="card-title">Retainer Creative</h2>
+            <p class="card-body">
+              For brands that want consistent content. Our monthly retainer gives you a steady stream of cinematic visuals.
+            </p>
+            <ul class="list">
+              <li>Recurring ad production</li>
+              <li>Priority support and edits</li>
+              <li>Built for ongoing growth</li>
+            </ul>
+          </div>
+        </div>
+
+        <div class="centered">
+          <a href="pricing.html" class="btn btn-primary">View Packages & Pricing</a>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> AuraPro Ads (APA). All rights reserved.</p>
+      <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
+    </div>
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+  </footer>
+</body>
+</html>
 
