--- a/pricing.html
+++ b/pricing.html
@@ -1,1 +1,144 @@
+<!DOCTYPE html>
+<html lang="en">
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+  <title>Pricing | AuraPro Ads</title>
+  <link rel="stylesheet" href="css/styles.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;600;700&family=Orbitron:wght@500;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="site-header">
+    <div class="container nav-container">
+      <a href="index.html" class="logo">
+        <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
+        <span class="logo-tag">APA</span>
+      </a>
+      <nav class="main-nav">
+        <a href="index.html" class="nav-link">Home</a>
+        <a href="services.html" class="nav-link">Services</a>
+        <a href="pricing.html" class="nav-link active">Pricing</a>
+        <a href="contact.html" class="nav-link nav-cta">Get Your Ad Created</a>
+      </nav>
+    </div>
+  </header>
+
+  <main>
+    <section class="section page-hero">
+      <div class="container">
+        <h1 class="page-title">Pricing & Packages</h1>
+        <p class="section-intro">
+          Choose the package that fits your current stage. Start small, prove the concept, and scale up when you’re ready.
+        </p>
+      </div>
+    </section>
+
+    <section class="section">
+      <div class="container">
+        <div class="grid grid-2 pricing-grid">
+          <!-- Starter -->
+          <div class="card card-price">
+            <h2 class="card-title">Starter Spotlight</h2>
+            <p class="price">$175</p>
+            <p class="card-body">
+              Best for small businesses, first-time promos, and testing what works.
+            </p>
+            <ul class="list">
+              <li>1 cinematic AI-powered ad (10–20 seconds)</li>
+              <li>Vertical or horizontal format</li>
+              <li>On-screen CTA included</li>
+              <li>1 revision round</li>
+              <li>Turnaround: 3–5 days</li>
+            </ul>
+            <a href="contact.html" class="btn btn-outline">Get Starter Spotlight</a>
+          </div>
+
+          <!-- Growth -->
+          <div class="card card-price card-highlight">
+            <h2 class="card-title">Growth Campaign</h2>
+            <p class="price">$350</p>
+            <p class="card-body">
+              For brands ready to look more professional online and across social platforms.
+            </p>
+            <ul class="list">
+              <li>1 main cinematic ad (20–40 seconds)</li>
+              <li>2 short social cutdowns</li>
+              <li>Script refinement and messaging polish</li>
+              <li>Platform-optimized exports</li>
+              <li>2 revision rounds</li>
+              <li>Turnaround: 5–7 days</li>
+            </ul>
+            <a href="contact.html" class="btn btn-primary">Start a Growth Campaign</a>
+          </div>
+
+          <!-- Authority -->
+          <div class="card card-price">
+            <h2 class="card-title">Authority Launch</h2>
+            <p class="price">$550</p>
+            <p class="card-body">
+              For launches and brands that want a more serious, elevated presence.
+            </p>
+            <ul class="list">
+              <li>1 premium cinematic commercial (45–60 seconds)</li>
+              <li>3–4 social cutdowns</li>
+              <li>AI voiceover (optional)</li>
+              <li>Story-driven pacing and structure</li>
+              <li>3 revision rounds</li>
+              <li>Turnaround: 7–10 days</li>
+            </ul>
+            <a href="contact.html" class="btn btn-outline">Book Authority Launch</a>
+          </div>
+
+          <!-- Domination -->
+          <div class="card card-price">
+            <h2 class="card-title">Domination Package</h2>
+            <p class="price">$1,500</p>
+            <p class="card-body">
+              For brands that want a full campaign: multiple ads, multiple angles, multi-platform.
+            </p>
+            <ul class="list">
+              <li>Multi-ad cinematic suite</li>
+              <li>Simple storyboard & campaign concept</li>
+              <li>Ads for multiple platforms (Web, YouTube, Meta, TikTok)</li>
+              <li>Priority delivery window</li>
+              <li>Creative direction included</li>
+              <li>Timeline: custom by project</li>
+            </ul>
+            <a href="contact.html" class="btn btn-outline">Request Domination Package</a>
+          </div>
+        </div>
+
+        <!-- Retainer -->
+        <div class="retainer">
+          <h2 class="section-title">Monthly Retainer: AuraPro Ad Engine</h2>
+          <p class="retainer-price">$2,500 / month</p>
+          <p class="section-intro">
+            For brands that want consistent, cinematic content on a monthly basis.
+          </p>
+          <ul class="list list-inline">
+            <li>4 short cinematic ads <strong>or</strong> 2 premium commercials each month</li>
+            <li>Priority edits and support</li>
+            <li>Ongoing optimization of hooks and visuals</li>
+          </ul>
+          <div class="centered">
+            <a href="contact.html" class="btn btn-primary">Apply for Retainer</a>
+          </div>
+        </div>
+      </div>
+    </section>
+  </main>
+
+  <footer class="site-footer">
+    <div class="container footer-inner">
+      <p>© <span id="year"></span> AuraPro Ads (APA). All rights reserved.</p>
+      <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
+    </div>
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+  </footer>
+</body>
+</html>
 
