--- a/contact.html
+++ b/contact.html
@@ -14,7 +14,7 @@
     <div class="container nav-container">
       <a href="index.html" class="logo">
         <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
-        <span class="logo-tag">APA</span>
+        <span class="logo-tag">WEMIR Systems</span>
       </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-link">Home</a>
@@ -85,8 +85,8 @@
                   <option value="Growth Campaign ($350)">Growth Campaign ($350)</option>
                   <option value="Authority Launch ($550)">Authority Launch ($550)</option>
                   <option value="Domination Package ($1,500)">Domination Package ($1,500)</option>
-                  <option value="Monthly Retainer ($2,500/mo)">Monthly Retainer ($2,500 / month)</option>
-                  <option value="Not sure">Not sure – recommend one</option>
+                  <option value="Monthly Retainer ($2,500/mo)">Monthly Retainer ($2,500 / Month)</option>
+                  <option value="Not sure">Not Sure – Recommend One</option>
                 </select>
               </div>
 
@@ -97,7 +97,7 @@
 
               <div class="form-group">
                 <label for="deadline">Do you have a desired launch date?</label>
-                <input type="text" id="deadline" name="deadline" placeholder="Example: December 28, 2025">
+                <input type="text" id="deadline" name="deadline" placeholder="Example: Jan 16">
               </div>
 
               <div class="form-group">
@@ -115,7 +115,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AuraPro Ads (APA). All rights reserved.</p>
+      <p>© <span id="year"></span> AuraPro Ads</p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
     <script>
