--- a/pricing.html
+++ b/pricing.html
@@ -14,7 +14,7 @@
     <div class="container nav-container">
       <a href="index.html" class="logo">
         <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
-        <span class="logo-tag">APA</span>
+        <span class="logo-tag">WEMIR Systems</span>
       </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-link">Home</a>
@@ -47,10 +47,9 @@
             </p>
             <ul class="list">
               <li>1 cinematic AI-powered ad (10–20 seconds)</li>
-              <li>Vertical or horizontal format</li>
               <li>On-screen CTA included</li>
               <li>1 revision round</li>
-              <li>Turnaround: 3–5 days</li>
+              <li>7 Day Delivery</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Get Starter Spotlight</a>
           </div>
@@ -63,12 +62,12 @@
               For brands ready to look more professional online and across social platforms.
             </p>
             <ul class="list">
-              <li>1 main cinematic ad (20–40 seconds)</li>
+              <li>1 main cinematic ad (25–40 seconds)</li>
               <li>2 short social cutdowns</li>
               <li>Script refinement and messaging polish</li>
               <li>Platform-optimized exports</li>
               <li>2 revision rounds</li>
-              <li>Turnaround: 5–7 days</li>
+              <li>7 Day Delivery</li>
             </ul>
             <a href="contact.html" class="btn btn-primary">Start a Growth Campaign</a>
           </div>
@@ -86,7 +85,7 @@
               <li>AI voiceover (optional)</li>
               <li>Story-driven pacing and structure</li>
               <li>3 revision rounds</li>
-              <li>Turnaround: 7–10 days</li>
+              <li>14 Day Delivery</li>
             </ul>
             <a href="contact.html" class="btn btn-outline">Book Authority Launch</a>
           </div>
@@ -113,7 +112,7 @@
         <!-- Retainer -->
         <div class="retainer">
           <h2 class="section-title">Monthly Retainer: AuraPro Ad Engine</h2>
-          <p class="retainer-price">$2,500 / month</p>
+          <p class="retainer-price">$2,500 / Month</p>
           <p class="section-intro">
             For brands that want consistent, cinematic content on a monthly basis.
           </p>
@@ -132,7 +131,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AuraPro Ads (APA). All rights reserved.</p>
+      <p>© <span id="year"></span> AuraPro Ads</p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
     <script>
