--- a/services.html
+++ b/services.html
@@ -14,7 +14,7 @@
     <div class="container nav-container">
       <a href="index.html" class="logo">
         <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
-        <span class="logo-tag">APA</span>
+        <span class="logo-tag">WEMIR Systems</span>
       </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-link">Home</a>
@@ -98,7 +98,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AuraPro Ads (APA). All rights reserved.</p>
+      <p>© <span id="year"></span> AuraPro Ads</p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
     <script>
