--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>AuraPro Ads | AI-Powered Cinematic Commercials</title>
+  <title>AuraPro Ads | Cinematic Commercials</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -34,7 +34,7 @@
           <h1 class="hero-title">
             Cinematic Ads.<br>
             Powered by <span class="neon-blue">AI</span>.<br>
-            Built to <span class="neon-red">Be Seen</span>.
+            Built to <span class="neon-red">BE SEEN</span>.
           </h1>
           <p class="hero-subtitle">
             AuraPro Ads creates high-impact commercials and social ads using cutting-edge AI tools—
