--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
           <h1 class="hero-title">
             Cinematic Ads.<br>
             Powered by <span class="neon-blue">AI</span>.<br>
-            Built to <span class="neon-red">BE SEEN</span>.
+            Built to <span class="neon-red">Be Seen</span>.
           </h1>
           <p class="hero-subtitle">
             AuraPro Ads creates high-impact commercials and social ads using cutting-edge AI tools—
