--- a/contact.html
+++ b/contact.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <title>Get Your Ad Created | AuraPro Ads</title>
+  <title>Get Your Ad Created | WEMIR Systems</title>
   <link rel="stylesheet" href="styles.css">
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -13,8 +13,8 @@
   <header class="site-header">
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <span class="logo-main">AuraPro<span class="logo-accent"> Ads</span></span>
-        <span class="logo-tag">WEMIR Systems</span>
+        <span class="logo-main">WEMIR<span class="logo-accent"> Systems</span></span>
+        <span class="logo-tag">WMS</span>
       </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-link">Home</a>
@@ -51,12 +51,8 @@
           </div>
 
           <div>
-            <!--
-              TODO:
-              Replace the `action` value below with your actual Formspree or Zapier webhook URL.
-              Example Formspree: https://formspree.io/f/your-id-here
-            -->
-            <form class="form" method="POST" action="https://formspree.io/f/mjkdzwaq">
+            <!-- We still point to Formspree, but JS will intercept the submit -->
+            <form class="form" id="wemir-form" method="POST" action="https://formspree.io/f/mjkdzwaq">
               <div class="form-group">
                 <label for="name">Your Name</label>
                 <input type="text" id="name" name="name" required>
@@ -79,13 +75,13 @@
 
               <div class="form-group">
                 <label for="package">Which package are you interested in?</label>
-                <select id="package" name="package">
-                  <option value= placeholder="Select a package"</option>
+                <select id="package" name="package" required>
+                  <option value="">Select a package</option>
                   <option value="Starter Spotlight ($175)">Starter Spotlight ($175)</option>
                   <option value="Growth Campaign ($350)">Growth Campaign ($350)</option>
                   <option value="Authority Launch ($550)">Authority Launch ($550)</option>
                   <option value="Domination Package ($1,500)">Domination Package ($1,500)</option>
-                  <option value="Monthly Retainer ($2,500/Mo)">Monthly Retainer ($2,500 / Month)</option>
+                  <option value="Monthly Retainer ($2,500 / Month)">Monthly Retainer ($2,500 / Month)</option>
                   <option value="Not sure">Not Sure – Recommend One</option>
                 </select>
               </div>
@@ -115,51 +111,59 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> AuraPro Ads</p>
+      <p>© <span id="year"></span> WEMIR Systems</p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
+    <script>
+      document.getElementById('year').textContent = new Date().getFullYear();
+    </script>
+  </footer>
+
+  <!-- Custom JS to send to Formspree and then redirect to PayPal -->
   <script>
-  const form = document.querySelector(".form");
-  const packageSelect = document.getElementById("package");
+    document.addEventListener("DOMContentLoaded", function () {
+      const form = document.getElementById("wemir-form");
+      const packageSelect = document.getElementById("package");
 
-  // Map each package to its PayPal link
-  const paypalLinks = {
-    "Starter Spotlight ($175)": "https://www.paypal.com/ncp/payment/M8N6KUEA7H7A8",
-    "Growth Campaign ($350)": "https://www.paypal.com/ncp/payment/FCXFF9DDUDZ68",
-    "Authority Launch ($550)": "https://www.paypal.com/ncp/payment/PN4DPGX9HBF6Q",
-    "Domination Package ($1,500)": "https://www.paypal.com/ncp/payment/RK4C7VGSKG8HC",
-    "Monthly Retainer ($2,500 / Month)": "https://www.paypal.com/ncp/payment/9YNMNSQ8CR8G6"
-  };
+      if (!form) return;
 
-  form.addEventListener("submit", function (event) {
-    event.preventDefault(); // stop the normal Formspree redirect
+      const paypalLinks = {
+        "Starter Spotlight ($175)": "https://www.paypal.com/ncp/payment/M8N6KUEA7H7A8",
+        "Growth Campaign ($350)": "https://www.paypal.com/ncp/payment/FCXFF9DDUDZ68",
+        "Authority Launch ($550)": "https://www.paypal.com/ncp/payment/PN4DPGX9HBF6Q",
+        "Domination Package ($1,500)": "https://www.paypal.com/ncp/payment/RK4C7VGSKG8HC",
+        "Monthly Retainer ($2,500 / Month)": "https://www.paypal.com/ncp/payment/9YNMNSQ8CR8G6"
+      };
 
-    const selected = packageSelect.value;
-    const payUrl = paypalLinks[selected];
+      form.addEventListener("submit", function (event) {
+        event.preventDefault(); // stop normal navigation to Formspree
 
-    if (!payUrl) {
-      alert("Please choose a package before submitting.");
-      return;
-    }
+        const selected = packageSelect.value;
+        const payUrl = paypalLinks[selected];
 
-    const formData = new FormData(form);
+        if (!payUrl) {
+          alert("Please choose a package before submitting.");
+          return;
+        }
 
-    // Send the form data to Formspree in the background
-    fetch(form.action, {
-      method: "POST",
-      body: formData,
-      headers: { "Accept": "application/json" }
-    })
-    .then(function (response) {
-      // If you want, you can check response.ok here
-      window.location.href = payUrl; // go to the correct PayPal checkout
-    })
-    .catch(function (error) {
-      console.error("Form submission error:", error);
-      alert("There was a problem submitting the form. Please try again.");
+        const formData = new FormData(form);
+
+        // Send to Formspree in the background
+        fetch("https://formspree.io/f/mjkdzwaq", {
+          method: "POST",
+          body: formData,
+          headers: { "Accept": "application/json" }
+        })
+        .then(function () {
+          // Redirect to the PayPal payment page for the chosen package
+          window.location.href = payUrl;
+        })
+        .catch(function (error) {
+          console.error("Form submission error:", error);
+          alert("There was a problem submitting the form. Please try again.");
+        });
+      });
     });
-  });
-</script>
+  </script>
 </body>
 </html>
-
