--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
   <header class="site-header">
     <div class="container nav-container">
       <a href="index.html" class="logo">
-        <span class="logo-main">WEMIR<span class="logo-accent"> Systems</span></span>
+        <span class="logo-main">AuraPro<span class="logo-accent">Ads</span></span>
         <span class="logo-tag">WMS</span>
       </a>
       <nav class="main-nav">
