--- a/contact.html
+++ b/contact.html
@@ -15,7 +15,7 @@
     <div class="container nav-container">
       <a href="index.html" class="logo">
         <span class="logo-main">AuraPro<span class="logo-accent">Ads</span></span>
-        <span class="logo-tag">WMS</span>
+        <span class="logo-tag">WEMIR Systems</span>
       </a>
       <nav class="main-nav">
         <a href="index.html" class="nav-link">Home</a>
