--- a/services.html
+++ b/services.html
@@ -106,6 +106,11 @@
       document.getElementById('year').textContent = new Date().getFullYear();
     </script>
   </footer>
+  <script
+    chatbot_id="6937937b76925b1a1c8869d4"
+    data-type="default"
+    src="https://app.thinkstack.ai/bot/thinkstackai-loader.min.js"
+></script>
 </body>
 </html>
 
