--- a/contact.html
+++ b/contact.html
@@ -166,5 +166,10 @@
       });
     });
   </script>
+  <script
+    chatbot_id="6937937b76925b1a1c8869d4"
+    data-type="default"
+    src="https://app.thinkstack.ai/bot/thinkstackai-loader.min.js"
+></script>
 </body>
 </html>
