--- a/contact.html
+++ b/contact.html
@@ -112,7 +112,7 @@
 
   <footer class="site-footer">
     <div class="container footer-inner">
-      <p>© <span id="year"></span> WEMIR Systems</p>
+      <p>© <span id="year"></span> AuraPro Ads</p>
       <p class="footer-sub">AI-powered cinematic ads for modern brands.</p>
     </div>
     <script>
