--- a/index.html
+++ b/index.html
@@ -130,24 +130,24 @@
 
         <div class="grid grid-3 pricing-preview">
           <div class="card card-price">
-            <h3 class="card-title">Starter Spotlight</h3>
-            <p class="price">$175</p>
+            <h3 class="card-title">Starter</h3>
+            <p class="price">$80</p>
             <p class="card-body">
-              One short cinematic ad to introduce your brand, offer, or promotion.
+              3 short cinematic ads to introduce your brand, offer, or promotion.
             </p>
             <a href="pricing.html" class="btn btn-outline">View Details</a>
           </div>
           <div class="card card-price card-highlight">
             <h3 class="card-title">Growth Campaign</h3>
-            <p class="price">$350</p>
+            <p class="price">$250</p>
             <p class="card-body">
-              A main ad plus social cutdowns—perfect for brands leveling up their online presence.
+              One 30-second ad plus two short 10-second ads perfect for brands leveling up their online presence.
             </p>
             <a href="pricing.html" class="btn btn-primary">View Full Pricing</a>
           </div>
           <div class="card card-price">
             <h3 class="card-title">Domination Package</h3>
-            <p class="price">$1,500</p>
+            <p class="price">$750</p>
             <p class="card-body">
               Multi-ad campaign, multi-platform approach, and creative direction to take over your niche.
             </p>
